<resources>
    <string name="app_name">Опросник Русалова</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="exitTest">Выйти из теста</string>
    <string name="startTest">Начать тест</string>
    <string name="watchResults">Посмотреть результаты</string>
    <string name="chooseTest">Выберите пройденный тест</string>
    <string name="toMenuButton">Вернуться в главное меню</string>
    <string name="newUser">Новый пользователь?</string>
    <string name="registeredYet">Уже зарегистрирован?</string>
    <string name="goodBay">До свидания!</string>
    <string name="writeDownYourName">Введите свое имя</string>
    <string name="makeUser">Создать пользователя</string>
    <string name="writeOrChoose">Введите пожалуйста имя или выберите из имеющихся</string>
    <string name="notMake">Не создавать</string>
    <string name="chooseUser">Выберите пользователя</string>
    <string name="returnMenu">Вернуться в главное меню</string>
    <string name="andAllHisData">и все его результаты тестирования?</string>
    <string name="deleteUser">Удалить пользователя</string>
    <string name="areYouSureToDeleteUser">Вы действительно хотите удалить запись пользователя</string>
    <string name="testNumber">Тестирование №</string>
    <string name="chooseTimeTest">Выберите дату пройденного теста</string>
    <string name="tableInfo">Таблица с результатами</string>
    <string name="scale">Шкала</string>
    <string name="scores">Баллы</string>
    <string name="level">Уровень</string>
    <string name="info">Описание</string>
    <string name="energy">Предметная эргичность</string>
    <string name="socialEnergy">Социальная эргичность</string>
    <string name="plasticity">Пластичность</string>
    <string name="socialPlasticity">Социальная пластичность</string>
    <string name="pace">Темп и Скорость</string>
    <string name="socialPace">Социальный темп</string>
    <string name="emotionality">Эмоциональность</string>
    <string name="socialEmotionality">Социальная эмоциональность</string>
    <string name="k">Контрольная шкала</string>
    <string name="high">Высокий</string>
    <string name="medium">Средний</string>
    <string name="low">Низкий</string>
    <string name="areYouSureToLeaveTest">Вы уверены что хотите покинуть тест</string>
    <string name="yourAnswersIsFailed">Ваши ответы свидетельствуют о  недостоверной самооценке своего поведения, возможно, вами руководствует желание выглядеть лучше, чем есть на самом деле</string>
    <string name="returnTest">Заново</string>
    <string name="toTestAndResult">Перейти к тестированию и просмотру результатов?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="back">Назад</string>
    <string name="nextQuestion">Далее</string>
    <string name="start">Начать проходить тест?</string>
    <string name="exit">Выход</string>
    <string name="startButton">Начать</string>
    <string name="mainMenu">В главное меню</string>
    <string name="resultsTitle"><b>Ваш результат</b></string>
    <string name="toMoreInfo">Перейти к детальной таблице результатов</string>
    <string name="instruction"><b>Инструкция</b>\n
               Вам предлагается ответить на 105 вопросов. Вопросы направлены на выяснение вашего обычного способа поведения. Постарайтесь представить типичные ситуации и дайте первый "естественный" ответ, который придет Вам в голову. Отвечайте быстро и точно. Помните, нет "хороших" или "плохих" ответов.</string>
    <string-array name="Questions"> 
        <item>Проворный ли ты человек?</item>
        <item>Готов ли ты обычно, не раздумывая, включиться в разговор?</item>
		<item>Нравится ли тебе быть одному больше, чем в компании?</item>
		<item>Испытываешь ли ты постоянную жажду знаний?</item>
		<item>Ты предпочитаешь говорить медленно и неторопливо?</item>
		<item>Задевают ли тебя замечания других людей?</item>
		<item>Трудно ли тебе заснуть из-за того, что ты повздорил с друзьями?</item>
		<item>Хочется ли тебе заняться каким-либо ответственным делом в свободное от занятий время?</item>
		<item>В разговоре с товарищами твоя речь часто опережает твою мысль?</item>
		<item>Раздражает ли тебя быстрая речь собеседника?</item>
		<item>Трудно ли тебе долго не общаться с людьми?</item>
		<item>Ты когда-нибудь опаздывал на урок?</item>
		<item>Нравится ли тебе быстро ходить и бегать?</item>
		<item>Сильно ли ты переживаешь, когда учитель ставит плохие отметки в дневник?</item>
		<item>Легко ли тебе выполнять школьное задание, требующее длительного внимания и большой сосредоточенности?</item>
		<item>Утомительно ли тебе быстро говорить?</item>
		<item>Часто ли ты испытываешь чувство тревоги, что выучил урок недостаточно глубоко?</item>
		<item>Легко ли твои мысли переходят с одной темы на другую во время разговора?</item>
		<item>Нравятся ли тебе игры, требующие большой скорости и ловкости?</item>
		<item>Склонен ли ты искать новые варианты решения задач?</item>
		<item>Испытываешь ли ты чувство беспокойства, что тебя неправильно поняли в разговоре?</item>
		<item>Охотно ли ты выполняешь сложное общественное поручение?</item>
		<item>Бывает ли, что ты говоришь о вещах, в которых не разбираешься?</item>
		<item>Легко ли ты воспринимаешь быструю речь?</item>
		<item>Легко ли тебе делать одновременно много дел?</item>
		<item>Часто ли бывает, что ты сказал что-то своим друзьям, не подумав?</item>
		<item>Обычно ты предпочитаешь выполнять общественное поручение, не требующее от тебя много энергии?</item>
		<item>Сильно ли ты переживаешь, когда обнаруживаешь ошибки в работе?</item>
		<item>Любишь ли ты медленную, сидячую работу?</item>
		<item>Легко ли тебе общаться с людьми?</item>
		<item>Обычно ты предпочитаешь подумать, взвесить и лишь потом высказываться на уроке?</item>
		<item>Все твои привычки хороши?</item>
		<item>Быстры ли твои движения?</item>
		<item>Обычно ты молчишь и не вступаешь в разговор, когда находишься в обществе малознакомых людей?</item>
		<item>Легко ли тебе перейти от игры к выполнению уроков?</item>
		<item>Глубоко ли ты переживаешь плохое к тебе отношение людей?</item>
		<item>Разговорчивый ли ты человек?</item>
		<item>Легко ли тебе выполнять поручения, требующие мгновенных реакций?</item>
		<item>Ты обычно говоришь свободно, без запинок?</item>
		<item>Волнуешься ли ты, что не сможешь выполнить порученное задание?</item>
		<item>Сильно ли ты расстраиваешься, когда близкие друзья указывают на твои недостатки?</item>
		<item>Испытываешь ли ты повышенную тягу к приобретению знаний на уроках?</item>
		<item>Считаешь ли ты свои движения медленными и неторопливыми?</item>
		<item>Бывают ли у тебя мысли, которые ты бы хотел скрыть от других?</item>
		<item>Легко ли тебе сходу, без особых раздумий, задавать вопросы?</item>
		<item>Доставляют ли тебе удовольствия быстрые движения?</item>
		<item>Легко ли тебе переключиться на новое дело?</item>
		<item>Стесняешься ли ты в присутствии незнакомых людей?</item>
		<item>Быстро ли ты выполняешь данное тебе поручение?</item>
		<item>Легко ли тебе выполнять сложные, ответственные дела самостоятельно?</item>
		<item>Можешь ли ты говорить быстро и разборчиво?</item>
		<item>Если ты обещал что-то сделать, всегда ли ты выполняешь свое обещание, независимо от того, можешь ты это или нет?</item>
		<item>Считаешь ли ты, что твои друзья обходятся с тобой хуже, чем следовало бы?</item>
		<item>Обычно ты предпочитаешь делать одно дело?</item>
		<item>Любишь ли ты быстрые игры?</item>
		<item>Много ли в твоей речи пауз?</item>
		<item>Легко ли тебе внести оживление в большую компанию?</item>
		<item>Чувствуешь ли ты себя настолько сильным и энергичным, что тебя всегда тянет заниматься каким-нибудь трудным делом?</item>
		<item>Трудно ли тебе переключаться с одного задания на другое?</item>
		<item>Бывает ли, что надолго портится настроение из-за того, что получил двойку?</item>
		<item>Тяжело ли тебе заснуть из-за того, что не ладятся дела, связанные с учебой?</item>
		<item>Любишь ли ты бывать в большой компании?</item>
		<item>Волнуешься ли ты, выясняя отношения с друзьями?</item>
		<item>Испытываешь ли ты сильную потребность в учебе?</item>
		<item>Злишься ли ты иногда по пустякам?</item>
		<item>Склонен ли ты делать много дел одновременно?</item>
		<item>Держишься ли ты свободно в большой компании?</item>
		<item>Часто ли ты высказываешь свое первое впечатление, не подумав?</item>
		<item>Беспокоит ли тебя чувство неуверенности, когда ты готовишь уроки?</item>
		<item>Медленны ли твои движения, когда ты что-либо мастеришь?</item>
		<item>Легко ли ты переключаешься с одного дела на другое?</item>
		<item>Быстро ли ты читаешь вслух?</item>
		<item>Ты иногда сплетничаешь?</item>
		<item>Молчалив ли ты, находясь в кругу незнакомых людей?</item>
		<item>Нуждаешься ли ты в людях, которые бы тебя ободрили и утешили в трудную минуту?</item>
		<item>Охотно ли ты выполняешь множество поручений одновременно?</item>
		<item>Любишь ли ты выполнять дела в быстром темпе?</item>
		<item>В свободное время тебя тянет пообщаться с людьми?</item>
		<item>Бывает ли у тебя бессонница при неудачах в школе?</item>
		<item>Долго ли ты переживаешь ссору с товарищами?</item>
		<item>Долго ли ты готовишься перед тем, как высказать свое мнение?</item>
		<item>Есть ли в твоем классе ученики, которые тебе очень не нравятся?</item>
		<item>Обычно ты предпочитаешь легкую работу?</item>
		<item>Сильно ли ты переживаешь после ссоры с друзьями?</item>
		<item>Легко ли тебе первому начать разговор в компании?</item>
		<item>Испытываешь ли ты большое желание к общению с людьми?</item>
		<item>Склонен ли ты сначала подумать, а потом говорить?</item>
		<item>Часто ли ты волнуешься по поводу своих школьных успехов?</item>
		<item>Всегда ли ты платил бы за проезд, если бы не опасался проверки?</item>
		<item>Держишься ли ты скованно в компаниях ребят?</item>
		<item>Склонен ли ты преувеличивать в своем воображении неудачи, связанные с учебой?</item>
		<item>Нравится ли тебе быстро говорить?</item>
		<item>Легко ли тебе удержаться от высказывания неожиданной мысли?</item>
		<item>Обычно ты работаешь неторопливо и медленно?</item>
		<item>Переживаешь ли ты из-за малейших неудач в учебе?</item>
		<item>Ты предпочитаешь медленный, спокойный разговор?</item>
		<item>Сильно ли ты волнуешься из-за ошибок, которые были допущены при выполнении контрольной работы?</item>
		<item>Легко ли тебе выполнять работу, требующую много времени?</item>
		<item>Легко ли тебе, не долго думая, обратиться с просьбой к взрослому человеку?</item>
		<item>Беспокоит ли тебя чувство неуверенности в себе при общении с другими людьми?</item>
		<item>Охотно ли ты берешься за выполнение новых поручений?</item>
		<item>Устаешь ли ты, когда говоришь быстро?</item>
		<item>Ты предпочитаешь работать с прохладцей, без особого напряжения?</item>
		<item>Легко ли тебе заниматься одновременно в нескольких кружках?</item>
		<item>Любишь ли ты подолгу оставаться один?</item>   
    </string-array>
     <string name="yourTemper"><b>Ваш темперамент: </b></string>
     <string name="yourWorkTemper">При работе вы - </string>
     <string name="yourSocialTemper">При общении вы - </string>
     <string name="sanguine"> Сангвиник</string>
     <string name="choleric"> Холерик</string>
     <string name="phlegmatic"> Флегматик</string>
     <string name="melancholiac"> Меланхолик</string>
     <string name="mixedCharacter"> Смешанный тип</string>
 	<string name="energyHigh"><b>Предметная эргичность</b>: высокая потребность в освоении предметного мира, жажду деятельности, стремление к напряженному умственному и физическому труду, легкость умственного пробуждения</string>
 	<string name="energyLow"><b>Предметная эргичность</b>: пассивность, низкий уровень тонуса и активации, нежелание умственного напряжения низкую вовлеченность в процесс деятельности</string>
</resources>