<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/graph1"
       	android:layout_width="fill_parent" 
        android:layout_height="0dp"
        android:layout_weight = "1"
        android:background="#000000" >
    </LinearLayout>

		<ScrollView 
		    android:layout_width="fill_parent" 
        	android:layout_height="0dp"
        	android:layout_weight = "1">

		        <TableLayout
		            android:id="@+id/tableLayout1"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:shrinkColumns="*"
		            android:stretchColumns="*" >

		            <TableRow android:id="@+id/tableRow" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_horizontal">

		                <TextView android:id="@+id/textView9" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_span="6" android:gravity="center" android:text="@string/tableInfo" android:textSize="18sp" android:textStyle="bold" android:typeface="serif" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow0" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/TextView01" android:gravity="center_horizontal" android:text="@string/scale" android:textSize="12sp" android:textStyle="bold" />

		                <TextView android:id="@+id/TextView02" android:gravity="center_horizontal" android:text="@string/scores" android:textSize="12sp" android:textStyle="bold" />

		                <TextView android:id="@+id/TextView03" android:gravity="center_horizontal" android:text="@string/level" android:textSize="12sp" android:textStyle="bold" />

		                <TextView android:id="@+id/TextView04" android:gravity="center_horizontal" android:text="@string/info" android:textSize="12sp" android:textStyle="bold" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView11" android:gravity="center_horizontal" android:text="1" android:textSize="12sp" />

		                <TextView android:id="@+id/textView12" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView13" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView14" android:gravity="center_horizontal" android:text="@string/energy" android:textSize="12sp" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow2" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView21" android:gravity="center_horizontal" android:text="2" android:textSize="12sp" />

		                <TextView android:id="@+id/textView22" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView23" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView24" android:gravity="center_horizontal" android:text="@string/socialEnergy" android:textSize="12sp" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow3" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView31" android:gravity="center_horizontal" android:text="3" android:textSize="12sp" />

		                <TextView android:id="@+id/textView32" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView33" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView34" android:gravity="center_horizontal" android:text="@string/plasticity" android:textSize="12sp" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow4" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView41" android:gravity="center_horizontal" android:text="4" android:textSize="12sp" />

		                <TextView android:id="@+id/textView42" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView43" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView44" android:gravity="center_horizontal" android:text="@string/socialPlasticity" android:textSize="12sp" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow5" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView51" android:gravity="center_horizontal" android:text="5" android:textSize="12sp" />

		                <TextView android:id="@+id/textView52" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView53" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView54" android:gravity="center_horizontal" android:text="@string/pace" android:textSize="12sp" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow6" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView61" android:gravity="center_horizontal" android:text="6" android:textSize="12sp" />

		                <TextView android:id="@+id/textView62" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView63" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView64" android:gravity="center_horizontal" android:text="@string/socialPace" android:textSize="12sp" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow7" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView71" android:gravity="center_horizontal" android:text="7" android:textSize="12sp" />

		                <TextView android:id="@+id/textView72" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView73" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView74" android:gravity="center_horizontal" android:text="@string/emotionality" android:textSize="12sp" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow8" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView81" android:gravity="center_horizontal" android:text="8" android:textSize="12sp" />

		                <TextView android:id="@+id/textView82" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView83" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView84" android:gravity="center_horizontal" android:text="@string/socialEmotionality" android:textSize="12sp" />
		            </TableRow>

		            <TableRow android:id="@+id/tableRow9" android:layout_width="match_parent" android:layout_height="wrap_content">

		                <TextView android:id="@+id/textView81" android:gravity="center_horizontal" android:text="k" android:textSize="12sp" />

		                <TextView android:id="@+id/textView92" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView93" android:gravity="center_horizontal" android:textSize="12sp" />

		                <TextView android:id="@+id/textView94" android:gravity="center_horizontal" android:text="@string/k" android:textSize="12sp" />
		            </TableRow>
		        </TableLayout>
	</ScrollView>
</LinearLayout>