<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/exitTest" />

    <Button
        android:id="@+id/registeredButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exitButton"
        android:layout_centerHorizontal="true"
        android:text="@string/registeredYet" />

    <Button
        android:id="@+id/newUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registeredButton"
        android:layout_alignParentLeft="true"
        android:text="@string/newUser" />

</RelativeLayout>