<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/resultsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultsTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="333dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/resultsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="resultsInfo" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <Button
        android:id="@+id/toMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toMenuButton" />

</LinearLayout>